# coder2langbot

./: Containerfile  LICENSE  README.md
bot/: Cargo.toml
bot/src/: main.rs  podmanager.rs
langs/c++/: run.sh
langs/laszlo/: compile.sh  run.sh
langs/phosphor/: compile.sh  hello-world.x86_64.txt  run.sh
